feat : 심화 요구사항 MapStruct 적용, 커서 페이지네이션 적용